--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@revelar-repo/ui",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": false,
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
@@ -17,6 +17,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files",
+    "pub": "git add . && git commit -m \"Updates\" && npm version patch && npm run build && npm publish",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -50,5 +51,16 @@
     "eslint-plugin-react": "^7.30.0"
   },
   "author": "pumulo",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pumulo/ui.git"
+  },
+  "keywords": [
+    "ui"
+  ],
+  "bugs": {
+    "url": "https://github.com/pumulo/ui/issues"
+  },
+  "homepage": "https://github.com/pumulo/ui#readme"
 }
